Experience Alignment+ Skill alignment css fixed.

--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -10,7 +10,3 @@ h1 {
   color: #343a40;
   font-size: 100px;
 }
-
-.experience-body {
-  margin-left: 1em;
-}
