--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -7,7 +7,15 @@
 }
 
 .icons {
+  /* padding-left: 2em; */
+
+  margin-left: 1em !important;
+  margin-top: 1em !important;
   color: grey;
+}
+
+#html {
+  margin-left: 0em !important;
 }
 
 .icons :hover {
